--- a/Pipfile
+++ b/Pipfile
@@ -1,11 +1,16 @@
 [[source]]
-url = "https://pypi.org/simple"
-verify_ssl = true
 name = "pypi"
+verify_ssl = true
+url = "https://pypi.org/simple"
 
 [packages]
-
-[dev-packages]
+wget = "*"
+certifi = "*"
+pycurl = "*"
+Django = "*"
+uWSGI = "*"
 
 [requires]
-python_version = "3.6"
+python_version = "3.5"
+
+[dev-packages]
