--- a/etc/uwsgi.ini
+++ b/etc/uwsgi.ini
@@ -1,14 +1,14 @@
 [uwsgi]
 ;http = 127.0.0.1:8000
-socket = ./uwsgi_django.sock
+socket = ./etc/uwsgi_django.sock
 processes = 1
 chmod-socket=777
 chown-socket=tuenut
 procname = tuvermind-web
 uid = tuenut
 gid = tuenut
-;daemonize = ./uwsgi_django.log
-pidfile = ./uwsgi_django.pid
+daemonize = ./etc/uwsgi_django.log
+pidfile = ./etc/uwsgi_django.pid
 vacuum = true
 master = true
 module = web.wsgi
