polish web, fix configs

--- a/etc/uwsgi.ini
+++ b/etc/uwsgi.ini
@@ -1,15 +1,15 @@
 [uwsgi]
 ;http = 127.0.0.1:8000
-socket = ./etc/uwsgi_django.sock
+socket = /tmp/tuvermind/uwsgi.sock
 processes = 1
-chmod-socket=777
-chown-socket=tuenut
-procname = tuvermind-web
-uid = tuenut
-gid = tuenut
-daemonize = ./etc/uwsgi_django.log
-pidfile = ./etc/uwsgi_django.pid
+chmod-socket=666
+chown-socket=user
+procname = tuvermind
+uid = user
+gid = www-data
+;daemonize = ./etc/uwsgi_django.log
+pidfile = /var/run/tuvermind/uwsgi_django.pid
 vacuum = true
 master = true
 module = web.wsgi
-chdir = /home/tuenut/PycharmProjects/tuvermind
+;chdir = /home/tuenut/PycharmProjects/tuvermind
