--- a/etc/uwsgi.ini
+++ b/etc/uwsgi.ini
@@ -1,6 +1,6 @@
 [uwsgi]
 ;http = 127.0.0.1:8000
-socket = /tmp/tuvermind/uwsgi.sock
+socket = /opt/tuvermind/uwsgi.sock
 processes = 1
 chmod-socket=666
 chown-socket=user
@@ -8,7 +8,7 @@ procname = tuvermind
 uid = user
 gid = www-data
 ;daemonize = ./etc/uwsgi_django.log
-pidfile = /var/run/tuvermind/uwsgi_django.pid
+pidfile = /opt/tuvermind/uwsgi_django.pid
 vacuum = true
 master = true
 module = web.wsgi
