--- a/etc/uwsgi.ini
+++ b/etc/uwsgi.ini
@@ -1,6 +1,6 @@
 [uwsgi]
 ;http = 127.0.0.1:8000
-socket = /opt/tuvermind/uwsgi.sock
+socket = /tmp/tuvermind.uwsgi.django.sock
 processes = 1
 chmod-socket=666
 chown-socket=user
@@ -8,8 +8,8 @@ procname = tuvermind
 uid = user
 gid = www-data
 ;daemonize = ./etc/uwsgi_django.log
-pidfile = /opt/tuvermind/uwsgi_django.pid
+pidfile = /tmp/tuvermind.uwsgi.django.pid
 vacuum = true
 master = true
-module = web.wsgi
+module = apps.wsgi
 ;chdir = /home/tuenut/PycharmProjects/tuvermind
