refactor import urls

--- a/Pipfile
+++ b/Pipfile
@@ -6,15 +6,17 @@ url = "https://pypi.org/simple"
 [packages]
 Django = "<3"
 uWSGI = "*"
-django_celery_beat = "*"
 celery = "*"
 redis = "*"
 psycopg2-binary = "*"
 requests = "*"
 djangorestframework = "*"
 django-filter = "*"
-pillow = "*"
 django-cors-headers = "*"
 djangorestframework-simplejwt = "*"
+django-celery-beat = "*"
+Pillow = "*"
+drf-yasg = "*"
+django-debug-toolbar = "==2.2"
 
 [dev-packages]
