Save last changes. Need to figure out, what i wanted

--- a/etc/uwsgi.ini
+++ b/etc/uwsgi.ini
@@ -1,12 +1,12 @@
 [uwsgi]
-;http = 127.0.0.1:8000
-socket = /tmp/tuvermind.uwsgi.django.sock
+http = 0.0.0.0:8000
+;socket = /tmp/tuvermind.uwsgi.django.sock
 processes = 1
-chmod-socket=666
-chown-socket=user
+;chmod-socket=666
+;chown-socket=user
 procname = tuvermind
-uid = user
-gid = www-data
+;uid = user
+;gid = www-data
 ;daemonize = ./etc/uwsgi_django.log
 pidfile = /tmp/tuvermind.uwsgi.django.pid
 vacuum = true
