--- a/.gitignore
+++ b/.gitignore
@@ -5,15 +5,10 @@
 *.ipynb
 *.editorconfig
 *.tar.gz
-.pycharm_venv/
 .idea/
 .ide_venv/
 .logs/
 __pycache__/
 celerybeat-schedule
-#static/
-#media/
 
-settings/secret.py
-
-etc/dev.env/.dev.env
+*.env
