--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -27,7 +27,9 @@ services:
       - "127.0.0.1:18000:8000"
     volumes:
       - ./src:/opt/tuvermind/
-      - /tmp/logs/:/var/log/tuvermind/
+      - .logs/:/var/log/tuvermind/
+      - static-files:/var/www/tuvermind/static
+      - media-files:/var/www/tuvermind/media
     env_file: .env
     entrypoint: uwsgi --ini uwsgi.ini
   #    celery:
@@ -81,6 +83,10 @@ services:
     volumes:
       - ./tuvermind.nginx:/etc/nginx/conf.d/default.conf
       - ./etc/favicon.png:/var/www/tuvermind/favicon.png
+      - static-files:/var/www/tuvermind/static
+      - media-files:/var/www/tuvermind/media
 
 volumes:
   tuvermind-db:
+  static-files:
+  media-files:
