fluentd->elastic->kibana almost configured, but not quite

--- a/tuvermind-fluentd.conf
+++ b/tuvermind-fluentd.conf
@@ -1,9 +1,25 @@
 <system>
-  enable_ruby true
+  log_level debug
 </system>
 
 <match fluent.**>
-    @type stdout
+    @type copy
+    <store>
+        @type stdout
+    </store>
+    <store>
+      @type elasticsearch
+      host elasticsearch
+      port 9200
+      index_name fluentd
+      type_name fluentd
+      include_tag_key true
+      logstash_format true
+      logstash_prefix fluentd
+      <buffer>
+        flush_interval 1s
+      </buffer>
+    </store>
 </match>
 
 <source>
@@ -16,19 +32,38 @@
     @type grep
     <regexp>
         key log
+        reserve_time true
         pattern special_fluentd_tag
     </regexp>
 </filter>
 
-<filter **>
+<filter tuvermind.celery>
   @type parser
   key_name log
   <parse>
     @type json
-    reserve_data true
+    time_type float
   </parse>
 </filter>
 
-<match tuvermind.celery>
-    @type stdout
+<match tuvermind.**>
+    @type copy
+    <store>
+        @type stdout
+    </store>
+
+    <store>
+      @type elasticsearch
+      host elasticsearch
+      port 9200
+      index_name fluentd
+      type_name fluentd
+      include_tag_key true
+      logstash_format true
+      logstash_prefix tuvermind
+      time_key
+      <buffer>
+        flush_interval 1s
+      </buffer>
+    </store>
 </match>
