--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -63,6 +63,8 @@ services:
     expose:
       - 9200
       - 9300
+    ports:
+      - "127.0.0.1:9200:9200"
     environment:
       # Password for the 'elastic' user (at least 6 characters)
       ELASTIC_PASSWORD: elastic
@@ -72,6 +74,12 @@ services:
       ES_PORT: 9200
       KIBANA_PORT: 5601
       MEM_LIMIT: 1073741824
+  kibana:
+    image: kibana:6.8.23
+    expose:
+      - 5601
+    ports:
+      - "127.0.0.1:5601:5601"
   nginx:
     depends_on:
       - api
