--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ djangorestframework==3.13.*
 djangorestframework-simplejwt==5.1.*
 django-filter==21.1.*
 drf-yasg
+django-log-request-id
 
 celery==5.2.*
 django_celery_beat==2.2.*
