--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,13 +11,6 @@ services:
     ports:
       - "18432:5432"
     env_file: .env
-  pg_admin:
-    image: dpage/pgadmin4
-    depends_on:
-      - database
-    ports:
-      - "127.0.0.1:18051:80"
-    env_file: .env
   redis:
     image: redis
     expose:
@@ -25,21 +18,26 @@ services:
     ports:
       - "127.0.0.1:18379:6379"
   api:
+    image: tuvermind
     depends_on:
       - database
       - redis
-    image: tuvermind
-    build: .
     expose:
       - 8000
     ports:
       - "127.0.0.1:18000:8000"
-    volumes:
-      - ./src:/opt/tuvermind/
-      - static-files:/var/www/tuvermind/static
-      - media-files:/var/www/tuvermind/media
     env_file: .env
     entrypoint: uwsgi --ini uwsgi.ini
+  celery_beat:
+    depends_on:
+      - database
+      - redis
+    image: tuvermind
+    volumes:
+      - ./src:/opt/tuvermind/
+    env_file: .env
+    entrypoint: celery -A apps.celery:app beat 
+      --scheduler=django_celery_beat.schedulers:DatabaseScheduler
   celery:
     depends_on:
       - database
@@ -50,19 +48,14 @@ services:
     env_file: .env
     entrypoint: celery -A apps.celery:app worker
   nginx:
+    image: tuvermind/front
     depends_on:
       - api
-    image: nginx
+    environment:
+      TUVERMIND_SERVER_NAME: localhost
     ports:
-      - "127.0.0.1:18080:80"
-      - "127.0.0.1:18443:443"
-    volumes:
-      - ./tuvermind.nginx:/etc/nginx/conf.d/default.conf
-      - ./etc/favicon.png:/var/www/tuvermind/favicon.png
-      - static-files:/var/www/tuvermind/static
-      - media-files:/var/www/tuvermind/media
+      - "127.0.0.1:80:80"
+      - "127.0.0.1:443:443"
 
 volumes:
   database:
-  static-files:
-  media-files:
